--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="abovebar">
 
 
-                        <div class="songinfo">ksjafkasjnf
+                        <div class="songinfo">null
 
                         </div>
                         <div class="songbuttons">
